# ecs

./: CMakeLists.txt
include/: detail.h  ecs.h
src/: main.cpp
